--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^6.0.9",
+    "electron": "^8.2.0",
     "electron-packager": "^14.0.6"
   },
   "dependencies": {
-    "@tensorflow-models/posenet": "^2.1.3",
-    "@tensorflow/tfjs-node": "^1.2.9",
+    "@tensorflow-models/posenet": "^2.2.1",
+    "@tensorflow/tfjs": "^1.7.1",
     "osc-js": "^2.0.3",
     "stats.js": "^0.17.0"
   }
